Added json web token authentication
